[messages] add scheduling
