# app/src/main/assets/api/swagger.json
@@ -603,6 +603,11 @@
             "example": "2020-01-01T00:00:00Z",
             "type": "string"
           },
+          "scheduleAt": {
+            "description": "Schedule message delivery at (must be in the future)",
+            "example": "2020-01-01T08:30:00Z",
+            "type": "string"
+          },
           "withDeliveryReport": {
             "description": "With delivery report",
             "example": true,
