# app/src/main/java/me/capcom/smsgateway/modules/localserver/routes/MessagesRoutes.kt
@@ -241,6 +241,7 @@ class MessagesRoutes(
                     skipPhoneValidation = skipPhoneValidation,
                     simNumber = request.simNumber,
                     validUntil = request.validUntil,
+                    scheduleAt = request.scheduleAt,
                     priority = request.priority,
                 )
             )
